Fix list of services on tablet and mobile

--- a/styles.css
+++ b/styles.css
@@ -1141,22 +1141,19 @@ footer img {
     padding-bottom: 4rem;
   }
 
-  .list-of-services ul .less-wording {
+  .list-of-services section .less-wording {
     gap: 1rem;
     margin-bottom: 1.5rem;
     text-align: center;
-    padding: 0;
     padding: 1.2rem 1rem;
     font-weight: 500;
     font-size: 1.1rem;
     width: 17.5rem;
-    height: 7vh;
-    list-style-type: none;
     border-radius: 7px;
     box-shadow: .15rem .15rem .15rem #5c5111;
   }
 
-  .list-of-services ul .more-content {
+  .list-of-services section .more-content {
     gap: 1rem;
     margin-bottom: 1.5rem;
     text-align: center;
@@ -1165,8 +1162,6 @@ footer img {
     font-weight: 500;
     font-size: 1.1rem;
     width: 17.5rem;
-    height: 21vh;
-    list-style-type: none;
     border-radius: 7px;
     box-shadow: .15rem .15rem .15rem #5c5111;
   }
@@ -1251,7 +1246,7 @@ footer img {
   }
   
   .meet-the-founder article img {
-    margin: 0 14rem;
+    margin: 0 11rem;
     position: static;
   }
 
